# sqlite-viewer

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  discovery.rs  error.rs  main.rs  server.rs  state.rs
apps/desktop/src/components/: ActivityPanel.tsx  BrowsePane.tsx  DataGrid.tsx  HistoryPalette.tsx  QueryPane.tsx  SavedQueriesPalette.tsx  SchemaPane.tsx  Sidebar.tsx  SqlEditor.tsx  StagedChangesPanel.tsx  StatusBar.tsx  Tabs.tsx  Toasts.tsx  Toolbar.tsx
apps/desktop/src/lib/: history.ts  loadSchemas.ts  saved.ts  session.ts  sql.test.ts  sql.ts  sqlFold.ts  tauri.ts  zoom.ts
apps/desktop/src/store/: app.ts
apps/desktop/src/styles/: app.css  tokens.css
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  exit.rs  main.rs  output.rs  params.rs
crates/cli/src/commands/: checkpoint.rs  diff.rs  dump.rs  exec.rs  history.rs  import.rs  maintenance.rs  mod.rs  open.rs  pragma.rs  push.rs  query.rs  schema.rs  simple.rs  stats.rs
crates/cli/tests/: cli_meta.rs  cli_ops.rs  cli_query.rs  cli_read.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: activity.rs  classify.rs  connection.rs  diff.rs  dump.rs  error.rs  import.rs  lib.rs  maintenance.rs  meta.rs  pragma.rs  query.rs  schema.rs  stats.rs  value.rs
crates/core/tests/: activity.rs  attached.rs  cancel.rs  diff.rs  dump.rs  exec_many.rs  generated_columns.rs  import_csv.rs  import_csv_strict.rs  import_json.rs  maintenance.rs  meta.rs  open.rs  pragma.rs  query.rs  schema.rs  stats.rs  triggers.rs  value.rs  wal_mode.rs
crates/core/tests/common/: mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
docs/: DESIGN.md
packaging/homebrew/: README.md  sqlv.rb
samples/: README.md  ecommerce.sqlite
scripts/: make_sample.py
skills/sqlite-viewer/: SKILL.md
