[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/mcp",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/shizhigu/sqlite-viewer"

[workspace.dependencies]
sqlv-core = { path = "crates/core" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
