[package]
name = "sqlv-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared SQLite operations for sqlite-viewer (desktop app + CLI)."

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
csv = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { workspace = true }
